--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -52,7 +52,7 @@
     }
     &--city {
       padding-left: 10px;
-      padding-bottom: 10px;
+      padding-bottom: 15px;
       font-size: 12px;
     }
     &--icon {
